# collision_avoidance

./: CMakeLists.txt  README.md  package.xml
collision_avoidance/msg/: cmd_vel.msg
collision_avoidance/src/: collision_avoider.cpp  geometry.h
src/: collision_avoider.cpp  geometry.h
